<resources>
    <string name="app_name">My Application</string>
    <string name="btn_login">登录</string>
    <string name="btn_forget">忘记密码</string>
    <string name="btn_register">注册</string>
    <string name="btn_clear">清理缓存</string>
    <string name="btn_resetting">重置密码</string>
    <string name="tv_account">帐号：</string>
    <string name="tv_pwd">密码：</string>
    <string name="tv_resetting">请输入忘记密码的帐号：</string>
    <string name="tv_debug">调试</string>
    <string name="edt_account">输入帐号</string>
    <string name="edt_pwd">输入密码</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="button2_text">返回</string>
</resources>
